<resources>
    <string name="app_name">TMDB</string>
    <string name="search">Search...</string>
    <string name="play">Play</string>

    <string name="select_language" translatable="false">Select Language</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No internet connection !</string>
    <string name="do_you_want_to_open_network_settings">Do you want to open network settings?</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>