<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/select_language"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_play_button_ripple"
            android:paddingHorizontal="30dp"
            android:paddingVertical="16dp"
            android:text="@string/english"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/btnArabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_play_button_ripple"
            android:paddingHorizontal="30dp"
            android:paddingVertical="16dp"
            android:text="@string/arabic"
            android:textColor="@android:color/white" />


    </LinearLayout>
</layout>